--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,3 +66,11 @@ footer {
 .logout {
   color: red;
 }
+
+.error {
+  background-color:red;
+  color: white;
+  padding: 20px;
+  width: 100%;
+  border-radius: 5px;
+}
